# energybrain

./: .env.template  .gitignore  CLAUDE.md  ENERGYBRAIN_CLAUDE_CODE_SPEC_FINAL.md  pyproject.toml
energybrain/: config.py  exceptions.py  main.py  models.py
energybrain-addon/: repository.yaml
energybrain-addon/energybrain/: build.yaml  config.yaml
energybrain/agents/: base_agent.py  energy_price_agent.py  goodwe_agent.py  ha_control_agent.py  heat_pump_agent.py  home_connect_agent.py  marstek_agent.py  notification_agent.py  p1_agent.py  weather_agent.py
energybrain/intelligence/: battery_dispatcher.py  day_planner.py  oscillation_detector.py  outcome_tracker.py  pattern_learner.py  pv_forecaster.py  thermal_model.py  week_strategist.py
energybrain/orchestrator/: orchestrator.py
energybrain/persistence/: database.py  learning_store.py  state_store.py
energybrain/safety/: hard_limits.py  rollback.py  watchdog.py
energybrain/utils/: ha_client.py  logging_config.py  retry.py
ha-addon/: Dockerfile  config.yaml  run.sh
ha_config/dashboards/: energybrain.yaml
scripts/: check_all_agents.py  check_ha_connection.py  simulate_day.py  train_models.py
tests/: conftest.py  test_config.py  test_database.py  test_exceptions.py  test_models.py  test_retry.py
tests/integration/: test_day_planning.py  test_full_cycle.py  test_safety_scenarios.py  test_week_strategy.py
tests/test_agents/: test_base_agent.py  test_energy_price_agent.py  test_goodwe_agent.py  test_ha_client.py  test_ha_control_agent.py  test_heat_pump_agent.py  test_home_connect_agent.py  (+4 more)
(+14 files in other folders)
