[project]
name = "energybrain"
version = "0.3.1"
description = "Intelligent learning home energy management system"
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "pymodbus>=3.6",
    "aiosqlite>=0.20",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "joblib>=1.3",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "aioresponses>=0.7",
    "coverage>=7.0",
    "freezegun>=1.4",
]
ml-advanced = [
    "xgboost>=2.0",
    "lightgbm>=4.3",
]

[tool.setuptools.packages.find]
include = ["energybrain*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (deselect with '-m not integration')"]

[tool.coverage.run]
source = ["energybrain"]
omit = ["*/tests/*", "scripts/*"]
